הורה והולכת על חבל

--- a/index.html
+++ b/index.html
@@ -435,6 +435,10 @@ Error message and password prompt
 
 <li>ההיררכיה במקרר</li>
 
+<li>הולכת על חבל</li>
+
+<li>הורה</li>
+
 <li>החיים זה לא דיבורים</li>
 
 <li>החיים נועדו למי שלא יכול להתמודד עם סמים</li>
@@ -8664,7 +8668,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ברכת השמש]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8684,7 +8688,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170806154822641" title="$:/temp/search">
+<div created="20161023184814872" modified="20170806204706535" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9553,14 +9557,14 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20170617143001014" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20170806224224301" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
 
-אנג'ליק היא הג'ינג'ית היפה וירוקת העיניים שהגיעה אלינו עם [[אלפרד]] [[לארוחת הכריסמס|ארוחת כריסמס]]. הם הכירו בקורס ל [[כירולוגיה פסיכודיאגנוסטית]].
+אנג'ליק היא הג'ינג'ית היפה וירוקת העיניים שהגיעה אלינו עם [[אלפרד]] [[לארוחת הכריסמס|ארוחת כריסמס]]. הם הכירו בקורס ל[[כירולוגיה פסיכודיאגנוסטית]].
 
-היא עדינה מאד ורגישה, אבל גם ראיתי אותה מתעצבנת. היא מטפלת בתנועה, היא בת 32 ויש לה אבא, [[אימא|אימא מהאגדות]], ושתי אחיות.
+היא עדינה מאד [[ורגישה|הולכת על חבל]], אבל גם ראיתי אותה מתעצבנת. היא מטפלת בתנועה, היא בת 32 ויש לה אבא, [[אימא|אימא מהאגדות]], ושתי אחיות.
 
 </pre>
 </div>
@@ -10829,6 +10833,28 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 ככל שיורדים במדפים, זה הולך ונהיה פחות נעים. ירקות, תבשילים, בשר - למרות טעמם הטעים.
 
 כי זה לא נורא אם נשפך קצת רוטב פירות יער על הבשר, אבל זה בלתי הפיך, אם הרוטב של הבשר נשפך על העוגות.</pre>
+</div>
+<div created="20170806204712419" modified="20170806224320025" tags="[[סיפורים אמיתיים]]" title="הולכת על חבל">
+<pre>[img[pictures/holechet-al-chevel.jpg]]
+
+!!![[אנג'ליק]]:
+
+אני מאוזנת בערך כמו [[הולך על חבל|https://en.wikipedia.org/wiki/Philippe_Petit]], שמתוח בין בניינים גבוהים. כל הזמן צריכה להיות זהירה לא ליפול, לדכאון, לחוסר רצון, לכעס, לרחמים עצמיים. כשאני על הקצה של הכסף, הזעם שלי גובר. אני יכולה מרגע היקיצה בבוקר, להיזכר [[במכונה|אימא מהאגדות]] ששיגרה אותי לעולם הזה כאילו מדובר במקרה רנדומלי, ולסנן כל מיני מילים ומשפטים לעברה.
+
+מאז שהכרתי את [[אלפרד]] וחבורתו שהפכה גם [[לחבורתי|אחות כהן]], החיים כיף. יש לי הרבה יותר עבודה וחברים, ואם אני נתקעת, יש לי ממי לבקש.
+
+ועדיין, יש ימים בהם אני כל כך מעורערת, אולי זה [[כוחו של הרגל|https://www.youtube.com/watch?v=AAyqbDvsp04]].
+
+</pre>
+</div>
+<div created="20170807163816985" modified="20170807183111046" tags="[[אירי טוענת]]" title="הורה">
+<pre>[img[pictures/hora.jpg]]
+
+!!![[אירי]]:
+
+את [[ההורה|https://en.wikipedia.org/wiki/Hora_(dance)]] רוקדים על קו [[המעגל|https://en.wikipedia.org/wiki/Circle_dance]].
+
+&quot;במעגל - אין ראשון ואין אחרון&quot;, הוא משפט שאני זוכרת ששמעתי פעם, אך לא מצאתי לו סימוכין.</pre>
 </div>
 <div created="20170514201348734" modified="20170514233042321" tags="[[סיפורים אמיתיים]]" title="החיים זה לא דיבורים">
 <pre>[img[pictures/hachaim-ze-lo.jpg]]
@@ -14248,7 +14274,7 @@ Fapina''
 
 //המשך יבוא//</pre>
 </div>
-<div created="20170806142815034" modified="20170806193447873" tags="[[אירי טוענת]]" title="תרגיל לבלטה">
+<div created="20170806142815034" modified="20170807163638876" tags="[[אירי טוענת]]" title="תרגיל לבלטה">
 <pre>[img[pictures/targil-lebalata.jpg]]
 
 !!![[אירי]]:
@@ -14263,7 +14289,7 @@ Fapina''
 
 אפשר עם  או בלי מוזיקה, כפות הרגליים עומדות כל אחת על בלטה, מקבילות זו לזו. הברכיים כפופות מעט ורכות, מפרקי הירך רכים, [[המותנית|צווארים]]. מניחים לצוואר להיות חופשי ומתחילים שני סיבובים, אחד כשרגל ימין נעה קדימה וחוזרת, הצידה ימינה וחוזרת, אחורה וחוזרת, הצידה ימינה וחוזרת (8 פעמות). אחר כך ובאותו אופן ברגל שמאל לצד שמאל.
 
-קל לזכור את התרגיל בדומה לריקודי העם של פעם, כלומר - כמו בדבקה או בהורה, הטקסט ברור, וכל שנותר הוא להתנועע ולאלתר תוך כדי תנועה.
+קל לזכור את התרגיל בדומה לריקודי העם של פעם, כלומר - כמו בדבקה או [[בהורה|הורה]], הטקסט ברור, וכל שנותר הוא להתנועע ולאלתר תוך כדי תנועה.
 
 כן או לא להעביר את המשקל לרגל המתנועעת, שינוי המהירות, הוספה של תנועת הידיים. כשהטקסט קצר וברור, אפשר להתעמק בתנועה, במקצב, בקצב, בחשיבה התנועתית ועוד.
 
