--- a/index.html
+++ b/index.html
@@ -465,6 +465,8 @@ Error message and password prompt
 
 <li>הנה, כך</li>
 
+<li>הנחלה בה גדלתי</li>
+
 <li>הסדנה של קואנג</li>
 
 <li>הסינים</li>
@@ -642,8 +644,6 @@ Error message and password prompt
 <li>סוניה</li>
 
 <li>סוסים לדבק</li>
-
-<li>סוף הנחלה</li>
 
 <li>סטלין</li>
 
@@ -8656,10 +8656,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20170802204454095" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20170808214126485" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20170802204455462" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20170808214133805" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8688,7 +8688,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170806204706535" title="$:/temp/search">
+<div created="20161023184814872" modified="20170808213023745" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8878,7 +8878,7 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 
 אודליה היא אחות קיי שסוחרת באמנות. לבושה בשיא הסטייל, יודעת טאנטרה, חתיכה לאללה, לא מקומית, משיגה כל מה שהיא רוצה, רווקה, צעירה מהאחרות. </pre>
 </div>
-<div created="20161213185747995" modified="20170604210227183" title="אווה">
+<div created="20161213185747995" modified="20170808211849005" tags="[[הנחלה בה גדלתי]]" title="אווה">
 <pre>[img[pictures/eva-veyoyo.jpg]]
 
 ''או בשמה המלא, אווה כהן.''
@@ -9461,12 +9461,12 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 
 </pre>
 </div>
-<div created="20170401233133830" modified="20170610184830979" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="איריס הבת">
+<div created="20170401233133830" modified="20170808211125273" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="איריס הבת">
 <pre>[img[pictures/iris-habat.jpg]]
 
 !!![[גורה]]:
 
-איריס בתה של אווה, היא ילדה זרחנית. זורחת באור ובחושך.</pre>
+איריס בתה של [[אווה]], והיא ילדה זרחנית. זורחת באור ובחושך.</pre>
 </div>
 <div created="20170415200315789" modified="20170714140957925" tags="[[אחיות חוץ]]" title="איתן וג'ואל כהן">
 <pre>[img[pictures/cohen-brothers.jpg]]
@@ -9699,7 +9699,7 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 אם קורה שאני לא אוכלת בבוקר [[קרואסון|טורט]] כלשהו ושותה [[קפה|הספלים מהם אנו שותים]], אני כל היום כמו תינוק שפסח על שלב הזחילה, [[המוטוריקה|https://he.wikipedia.org/wiki/%D7%94%D7%9E%D7%A2%D7%A8%D7%9B%D7%AA_%D7%94%D7%9E%D7%95%D7%98%D7%95%D7%A8%D7%99%D7%AA]] שלי משתבשת.
 </pre>
 </div>
-<div created="20170425194155286" modified="20170728195032239" title="בחוות החיות">
+<div created="20170425194155286" modified="20170808211327919" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
 
 
@@ -10977,7 +10977,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170206170428832" modified="20170211162111867" title="המטבח של הנחלה">
+<div created="20170206170428832" modified="20170808212019188" tags="[[הנחלה בה גדלתי]]" title="המטבח של הנחלה">
 <pre>[img[pictures/H6xbulbEUPkghQf2.jpg]]
 
 המטבח של הנחלה היה ענקי.
@@ -11082,6 +11082,17 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;list-links filter:&quot;[tag[הנה, כך]]&quot;&gt;&gt;
 
 
+</pre>
+</div>
+<div created="20170201205235325" modified="20170808211356240" title="הנחלה בה גדלתי">
+<pre>[img[pictures/sof-hanachala.jpg]]
+
+!!![[אווה]]:
+
+זה היה הבית שלנו [[בנחלה|כוכב המשאלות בעל תשע הצלעות]] בה גדלתי.
+
+
+&lt;&lt;list-links filter:&quot;[tag[הנחלה בה גדלתי]]&quot;&gt;&gt;
 </pre>
 </div>
 <div created="20170704162831150" modified="20170705072446783" title="הסדנה של קואנג">
@@ -11581,7 +11592,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161113182253178" modified="20170722080438188" title="כוכב המשאלות בעל תשע הצלעות">
+<div created="20161113182253178" modified="20170808212121130" tags="[[הנחלה בה גדלתי]]" title="כוכב המשאלות בעל תשע הצלעות">
 <pre>[img[pictures/cochav-hamishalot.jpg]]
 
 !!![[אווה]]:
@@ -12341,13 +12352,6 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170201205235325" modified="20170720162213596" title="סוף הנחלה">
-<pre>[img[pictures/sof-hanachala.jpg]]
-
-!!![[אווה]]:
-
-זה היה הבית שלנו [[בנחלה|כוכב המשאלות בעל תשע הצלעות]] בה גדלתי.</pre>
-</div>
 <div created="20161026224824040" modified="20170507182400769" tags="HH" title="סטלין">
 <pre>@@.center
 
@@ -12374,14 +12378,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[סיפורים אמיתיים]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170507202822300" modified="20170508140216258" tags="[[סיפורים אמיתיים]]" title="סיפורים שסיפרתי לנורמה">
+<div created="20170507202822300" modified="20170808211712567" tags="[[סיפורים אמיתיים]]" title="סיפורים שסיפרתי לנורמה">
 <pre>[img[pictures/sipoorim-lenorma.jpg]]
 
 !!![[אווה]]:
 
 נורמה היא אימו של [[פיליפ]] אהובי.
 
-היא וג'ו, בעלה, שניהם ז&quot;ל, אימצו אותי כשהייתי בת 18, ממש כשהגעתי לארץ [[מהנחלה|סוף הנחלה]] חבולה ובודדה.
+היא וג'ו, בעלה, שניהם ז&quot;ל, אימצו אותי כשהייתי בת 18, ממש כשהגעתי לארץ [[מהנחלה|הנחלה בה גדלתי]] חבולה ובודדה.
 
 סיפרתי לה את סיפור חיי, שחלקים ממנו כתובים [[בכוכב המשאלות בעל תשע הצלעות|כוכב המשאלות בעל תשע הצלעות]], לפרטי פרטים. נורמה הייתה אז בת 60.
 מה שהייתי רוצה להגיד [[בסיפור האמיתי הזה|סיפורים אמיתיים]], זה שכל העניין הוא, [[לשתות משהו קר בלב מדבר|https://www.youtube.com/watch?v=DlzMlFXzfnY&amp;spfreload=10]].
@@ -12860,7 +12864,7 @@ May the lord bless your soul, I love you girl</pre>
 
 לשים לה את היד (עם כפפה) על הפנים, ולסובב.</pre>
 </div>
-<div created="20161218191604654" modified="20170527131033975" title="עץ המשפחה של אווה">
+<div created="20161218191604654" modified="20170808212246351" tags="[[הנחלה בה גדלתי]]" title="עץ המשפחה של אווה">
 <pre>[img[pictures/eva-garinit.jpg]]
 
 
@@ -13791,7 +13795,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170124175341008" modified="20170425191121295" tags="" title="ריחות">
+<div created="20170124175341008" modified="20170808211650508" tags="[[הנחלה בה גדלתי]]" title="ריחות">
 <pre>[img[pictures/reychot.jpg]]
 
 !!![[אווה]]:
@@ -13806,7 +13810,7 @@ Fapina''
 
 סבי, אביו של אבי, שהלך לעולמו לפני שנולדתי, בנה אותו. זה היה מבנה עץ שבסיסו גבוה יחסית, ואל הדלת הובילו עשר מדרגות. מסביב היה דק ברוחב של 30 סנטימטרים, מלאכת מחשבת של חיבור פלטות מסוגי עץ  שונים ובגדלים שונים. את שלושה מקירות החלל הפנימי ובגובה של 30 סנטימטרים מהריצפה סבב ספסל אחד שלם, שחלקו, עם השנים, הפך למדף  - גם הוא - מרוצף פלטות שונות ומשוייפות עד כדי שלמות. מעל לספסל חלונות מלבניים, ארבעה על כל קיר. במרכז החלל שגודלו היה 15 על 20 מטרים רבועים היו שני שולחנות עבודה גדולים ומתחתם מדפים. המסור הגדול, מכונת השיוף ושאר כלי העבודה עמדו על הקיר הרביעי, שבמרכזו הייתה דלת רחבה לה קראנו דלת הספקים. זו הייתה הלצה של רזיאל, כי לא היו ספקים, כי אם רק משפחתנו ועובדי הנחלה. עובדי הנחלה במקרה הזה היו בעיקר [[רזיאל ורפאל]], שניים מ-24 חצאי אחי ואחיותי, ושניים משלושת בניה של פרלה, אשתו הראשונה של אבי, שנפטרה שנים קודם. זה היה הבניין היפה ביותר בנחלה, ולאחר שסבי , שאהבתו הגדולה הייתה נגרות, נפטר, דאג אבי לנגר אומן שיישמר את כל מה שסבי בנה. 
 
-אדם הגיע כמה שנים אחרי שסבי נפטר, ונשאר [[עד הסוף|סוף הנחלה]].
+אדם הגיע כמה שנים אחרי שסבי נפטר, ונשאר [[עד הסוף|הנחלה בה גדלתי]].
 
 
 
