--- a/index.html
+++ b/index.html
@@ -8656,10 +8656,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20170808214126485" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20170809214837803" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20170808214133805" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20170809214840769" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8668,7 +8668,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="[[אירי וגורה]] [[עם הפנים החוצה]] איריס [[הנחלה בה גדלתי]] [[המטבח של הנחלה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8688,7 +8688,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170808213023745" title="$:/temp/search">
+<div created="20161023184814872" modified="20170809214827806" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9450,7 +9450,7 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 
 &lt;&lt;list-links filter:&quot;[tag[אירי טוענת]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170201204950366" modified="20170425162732610" title="איריס">
+<div created="20170201204950366" modified="20170809205941435" tags="[[הנחלה בה גדלתי]]" title="איריס">
 <pre>[img[pictures/iris.jpg]]
 
 
@@ -11084,7 +11084,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170201205235325" modified="20170808211356240" title="הנחלה בה גדלתי">
+<div created="20170201205235325" modified="20170809144549942" title="הנחלה בה גדלתי">
 <pre>[img[pictures/sof-hanachala.jpg]]
 
 !!![[אווה]]:
@@ -12793,7 +12793,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170411211723019" modified="20170501202928657" title="עיר בנויה מרחובות">
+<div created="20170411211723019" modified="20170809210231427" tags="[[חלומות שחלמנו]]" title="עיר בנויה מרחובות">
 <pre>[img[pictures/ir-bnooya.jpg]]
 
 !!![[אירי]]:
@@ -12806,7 +12806,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 השארתי אותו כמו שהוא כדי שאפשר יהיה לראות מה מתלהבת והזויה כאחד הייתי:
 
- עיר בנויה מרחובות
+'' עיר בנויה מרחובות''
 
 כל בוקר אני צועדת ברחובות העיר לפחות שעה.
 אני עושה את זה בקצב דיי מהיר, מבטי חולף על פני המראות וקולט מה שקולט. זו הליכה מעוררת השראה.
@@ -12827,7 +12827,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170628145012336" modified="20170703195101803" tags="[[אירי טוענת]]" title="עם הפנים החוצה">
+<div created="20170628145012336" modified="20170809210244658" tags="[[אירי טוענת]]" title="עם הפנים החוצה">
 <pre>[img[pictures/im-hapanim-hachuza.jpg]]
 
 !!![[אירי]]:
@@ -13723,7 +13723,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170202133543180" modified="20170425162003640" title="רזיאל ורפאל">
+<div created="20170202133543180" modified="20170809205957525" tags="[[הנחלה בה גדלתי]]" title="רזיאל ורפאל">
 <pre>[img[pictures/refaelveraziel.jpg]]
 
 !!![[אווה]]:
