אחיות חתול, קופים ממונעים, תחבורה ציבורית

--- a/index.html
+++ b/index.html
@@ -287,6 +287,8 @@ Error message and password prompt
 
 <li>אחיות חוץ</li>
 
+<li>אחיות חתול</li>
+
 <li>אחיות לחושן</li>
 
 <li>איזדורה דאנקן</li>
@@ -749,6 +751,8 @@ Error message and password prompt
 
 <li>קוסקוס</li>
 
+<li>קופים ממונעים</li>
+
 <li>קפה מילר</li>
 
 <li>קפיץ ספירלי</li>
@@ -796,6 +800,8 @@ Error message and password prompt
 <li>תבשיל שורשים ואורז בשלושה צבעים</li>
 
 <li>תומר</li>
+
+<li>תחבורה ציבורית</li>
 
 <li>תיקי גב לקניות שדןדן ויויו הכינו</li>
 
@@ -8662,10 +8668,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20170814200410111" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20170817163212715" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20170814200412717" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20170817175500073" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8674,7 +8680,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עוגות תאנים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[תחבורה ציבורית]] [[אחיות חתול]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8694,7 +8700,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170815170621839" title="$:/temp/search">
+<div created="20161023184814872" modified="20170817182043321" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9323,14 +9329,14 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 
 את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.</pre>
 </div>
-<div created="20170423214419764" modified="20170621124448121" title="אחות כהן">
+<div created="20170423214419764" modified="20170817163350381" tags="[[קופים ממונעים]]" title="אחות כהן">
 <pre>[img[pictures/achot-coen.jpg]]
 
 [[שלום ואהבה|imagine]].
 
 &lt;&lt;list-links filter:&quot;[tag[אחות כהן]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170415105721479" modified="20170725201727694" title="אחיות חוץ">
+<div created="20170415105721479" modified="20170817163255963" tags="[[קופים ממונעים]]" title="אחיות חוץ">
 <pre>[img[pictures/ahayot-huz.jpg]]
 
 !!![[גורה]]:
@@ -9342,7 +9348,14 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 &lt;&lt;list-links filter:&quot;[tag[אחיות חוץ]]&quot;&gt;&gt;
 </pre>
 </div>
-<div created="20170612182534470" modified="20170618120702254" title="אחיות לחושן">
+<div created="20170817181814040" modified="20170818142205840" tags="[[קופים ממונעים]]" title="אחיות חתול">
+<pre>[img[pictures/achayot-chatul.jpg]]
+
+!!![[יויו]]:
+
+כששואלים אחות כהן איזה חיה היא - היא מיד עונה - חתול.</pre>
+</div>
+<div created="20170612182534470" modified="20170817160108761" tags="[[קופים ממונעים]]" title="אחיות לחושן">
 <pre>[img[pictures/achayot-la-choshen.jpg]]
 
 !!![[יויו]]:
@@ -9741,7 +9754,7 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 
 דןדן</pre>
 </div>
-<div created="20170425194155286" modified="20170808211327919" title="בחוות החיות">
+<div created="20170425194155286" modified="20170817163415339" tags="[[קופים ממונעים]]" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
 
 
@@ -9899,7 +9912,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170514214551974" modified="20170522172321747" tags="[[סיפורים אמיתיים]]" title="גבר פריבילגי">
+<div created="20170514214551974" modified="20170817163441756" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]]" title="גבר פריבילגי">
 <pre>[img[pictures/gever-privilegy.jpg]]
 
 !!![[יויו]]:
@@ -10528,7 +10541,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170105170620001" modified="20170628144930118" tags="[[אירי טוענת]]" title="גלות">
+<div created="20170105170620001" modified="20170817163510513" tags="[[אירי טוענת]] [[קופים ממונעים]]" title="גלות">
 <pre>[img[pictures/galoot.jpg]]
 
 
@@ -10764,7 +10777,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20161111215423587" modified="20170729195350297" title="האחיות כהן">
+<div created="20161111215423587" modified="20170817160246381" tags="[[קופים ממונעים]]" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -10800,7 +10813,7 @@ Is where I want to be
 K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
-<div created="20170504162635914" modified="20170709132206893" title="האסיפה הראשונה">
+<div created="20170504162635914" modified="20170817163640560" tags="[[קופים ממונעים]]" title="האסיפה הראשונה">
 <pre>[img[pictures/asefot.jpg]]
 
 !!![[פיליפ]]:
@@ -10962,7 +10975,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 היא רזה מאוד, ובבעלותה חתול מצרי שנמצא אתה כל הזמן. היא נטשה קריירה בעסקי הנדל&quot;ן שלא הייתה לטובת &quot;האור&quot;.  גרושה גועל נפש.</pre>
 </div>
-<div created="20161217212236965" modified="20170715130439651" tags="[[אירי וגורה]]" title="הכפר הגלובלי">
+<div created="20161217212236965" modified="20170817163705607" tags="[[אירי וגורה]] [[קופים ממונעים]]" title="הכפר הגלובלי">
 <pre>[img[pictures/hacfar-haglobaly.jpg]]
 
 !!![[אירי]] [[וגורה|גורה]]:
@@ -11314,14 +11327,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אני אוהבת את [[וס אנדרסון|http://www.imdb.com/name/nm0027572/]], כי תמיד הוא מצחיק אותי, ומשמח אותי. כל פריים שלו כמעט מפתיע, מלא דימיון, יפה, חכם וסימטרי - שזה הכי חשוב.</pre>
 </div>
-<div created="20161112221314170" modified="20170618163433454" tags="[[אחות כהן]]" title="ז'נבייב">
+<div created="20161112221314170" modified="20170817182029002" tags="[[אחות כהן]]" title="ז'נבייב">
 <pre>[img[pictures/genevieve.jpg]]
 ''
 המתוקה''
 
 !!![[יויו]]:
 
-ז'נבייב, genevieve kilito, היא היא החתול האמיתי מבין כולנו.
+ז'נבייב, genevieve kilito, היא היא [[החתול האמיתי|אחיות חתול]] מבין כולנו.
 ראשית פני חתול לה. עיניה ירוקות- חומות- צהובות- כחולות - תלוי מה היא לובשת. היא מרחרחת, בעיקר את הרטבים. היא נוהמת כשטעים לה או כשמשהו עובר לה מתחת לשפם. 
 
 היא מוציאה שפם בחוט, יותר נכון אימה מוציאה לה.
@@ -11473,12 +11486,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 חנות הדיסקים נמצאת בקומה הראשונה של [[געזונטהייטס]]. היא שייכת [[לשלום|שלום]], כמו הבניין כולו, [[ואווה היא זו|מוכרת הדיסקים/dj]] שמחזיקה אותה. בתוך חנות הדיסקים יש אולפן קטן, שמשרת את [[גלי זחל]].</pre>
 </div>
-<div created="20170711174005898" modified="20170720162020750" tags="סדרות [[אחיות חוץ]]" title="חשיפה לצפון">
+<div created="20170711174005898" modified="20170817163146337" tags="סדרות [[אחיות חוץ]]" title="חשיפה לצפון">
 <pre>[img[pictures/northern-exposure.jpg]]
 
 !!![[יויו]]:
 
-[[סיסלי|http://northernexposure.wikia.com/wiki/Cicely,_Alaska]] בשבילי היא בית שני, ואד, ג'ואל, הולינג, כריס, רות'-אן, מגי, מרילין וכל השאר -  הם גם - אחיות שלי
+[[סיסלי|http://northernexposure.wikia.com/wiki/Cicely,_Alaska]] בשבילי היא [[בית שני|קופים ממונעים]], ואד, ג'ואל, הולינג, שלי, כריס, רות'-אן, מגי, מרילין וכל השאר -  הם גם - אחיות שלי
 
 [[its not the thing you fling, its the fling itself|https://www.youtube.com/watch?v=V6zmMWfzv38]]</pre>
 </div>
@@ -11589,7 +11602,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170610184436279" modified="20170815162945054" tags="[[סיפורים אמיתיים]]" title="ילדים חד הוריים">
+<div created="20170610184436279" modified="20170817155958322" tags="[[סיפורים אמיתיים]]" title="ילדים חד הוריים">
 <pre>[img[pictures/yeladim-chad.jpg]]
 
 !!![[ראשל]]:
@@ -12569,7 +12582,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170815164314386" modified="20170816150904007" tags="[[כשהם ישנים]]" title="עוגות תאנים">
+<div created="20170815164314386" modified="20170817134536479" tags="[[כשהם ישנים]] [[חיות אוכל]]" title="עוגות תאנים">
 <pre>[img[pictures/ugat-teenim.jpg]]
 
 !!![[אווה]]:
@@ -13700,6 +13713,32 @@ Fapina''
 
 7. מגישים: על צלחת גדולה ערימת קוסקוס ועליה המרק.</pre>
 </div>
+<div created="20170817155826253" modified="20170818045323178" tags="" title="קופים ממונעים">
+<pre>[img[pictures/kofim-memunaim.jpg]]
+
+!!![[יויו]]: 
+
+את המשפט הזה, אימא של וודי אלן אומרת [[לאד|http://www.imdb.com/name/nm0123261/?ref_=nm_mv_close]], בסידרה [[חשיפה לצפון]] [[(עונה שלישית פרק ארבע)|http://www.imdb.com/title/tt0662321/]]
+
+[[כאחות כהן|אחות כהן]], ה-DNA שלי נושא בתוכו, אני מניח, אי אילו עוברי אורח - אולי [[קוזאקים|https://he.wikipedia.org/wiki/%D7%A7%D7%95%D7%96%D7%90%D7%A7%D7%99%D7%9D]], אולי [[טטרים|https://he.wikipedia.org/wiki/%D7%98%D7%98%D7%A8%D7%99%D7%9D]], אולי [[ויקינגים|https://he.wikipedia.org/wiki/%D7%95%D7%99%D7%A7%D7%99%D7%A0%D7%92%D7%99%D7%9D]], [[פיניקים|https://he.wikipedia.org/wiki/%D7%A4%D7%99%D7%A0%D7%99%D7%A7%D7%99%D7%9D]], [[יבוסים|https://he.wikipedia.org/wiki/%D7%99%D7%91%D7%95%D7%A1%D7%99%D7%9D]], [[הונים|https://he.wikipedia.org/wiki/%D7%94%D7%95%D7%A0%D7%99%D7%9D]] וכל השאר
+
+ 
+[[כהומו ספיאנס|https://he.wikipedia.org/wiki/%D7%90%D7%93%D7%9D]] יש מצב שבמטעני הגנטי קיימת כמות לא ידועה, של שרידי גנום [[ניאנדרטלי|https://he.wikipedia.org/wiki/%D7%94%D7%90%D7%93%D7%9D_%D7%94%D7%A0%D7%99%D7%90%D7%A0%D7%93%D7%A8%D7%98%D7%9C%D7%99]] או [[אוסטרלופיתקוסי|https://he.wikipedia.org/wiki/%D7%90%D7%95%D7%A1%D7%98%D7%A8%D7%9C%D7%95%D7%A4%D7%99%D7%AA%D7%A7%D7%95%D7%A1]], שלא לומר [[אורורין טוגננסיס|https://he.wikipedia.org/wiki/%D7%90%D7%95%D7%A8%D7%95%D7%A8%D7%99%D7%9F_%D7%98%D7%95%D7%92%D7%A0%D7%A0%D7%A1%D7%99%D7%A1]]
+
+אנחנו כולנו כולנו, וכולנו זה [[אנחנו|https://i.pinimg.com/236x/c3/7a/64/c37a645d3911729deef9f23354ce32bc--northern-exposure-car-keys.jpg]]
+
+למרבה הצער גם אני, אומנם נוסע [[בתחב&quot;צ|תחבורה ציבורית]], אך עדיין ממונע ששואל את עצמו, מה עוד הוא?
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[קופים ממונעים]]&quot;&gt;&gt;
+
+
+
+
+
+</pre>
+</div>
 <div created="20170119232802609" modified="20170802132212891" tags="HH" title="קפה מילר">
 <pre>[img[pictures/cafe-muller.jpg]]
 
@@ -14360,6 +14399,15 @@ Fapina''
 אנחנו חברים מהגנון.
 
 </pre>
+</div>
+<div created="20170817170010531" modified="20170818045231062" title="תחבורה ציבורית">
+<pre>[img[pictures/tachbura-ziburit.jpg]]
+
+!!![[יויו]]:
+
+לפעמים אידאלים הופכים למעשים, ולפעמים מעשים הופכים לאידאלים
+
+למשל, אני גאה לומר שאינני אוחז ברכב פרטי, כי אם עושה תחב&quot;צ או טרמפים</pre>
 </div>
 <div created="20170405141252134" modified="20170729203650277" tags="[[חלומות שחלמנו]]" title="תיקי גב לקניות שדןדן ויויו הכינו">
 <pre>[img[pictures/tik-kniyot.jpg]]
