שערות לאחור, סולטנה, צזיקי, שה פניס

--- a/index.html
+++ b/index.html
@@ -645,6 +645,8 @@ Error message and password prompt
 
 <li>סדרות</li>
 
+<li>סולטנה</li>
+
 <li>סוניה</li>
 
 <li>סוסים לדבק</li>
@@ -745,6 +747,8 @@ Error message and password prompt
 
 <li>צווארים</li>
 
+<li>צזיקי</li>
+
 <li>צלי בשר עם תפוחי אדמה</li>
 
 <li>קואנג</li>
@@ -777,6 +781,8 @@ Error message and password prompt
 
 <li>שָה נוּאָר</li>
 
+<li>שה פניס</li>
+
 <li>שואה</li>
 
 <li>שותה עם גורה</li>
@@ -792,6 +798,8 @@ Error message and password prompt
 <li>שניצל</li>
 
 <li>שעועית ירוקה בחמאה ושום</li>
+
+<li>שערות לאחור</li>
 
 <li>שרלה הייתה אוהבת את זה</li>
 
@@ -8680,7 +8688,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[תחבורה ציבורית]] [[אחיות חתול]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[שה פניס]] [[שערות לאחור]] סולטנה צזיקי [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8700,7 +8708,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170817182043321" title="$:/temp/search">
+<div created="20161023184814872" modified="20170821185149859" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9716,7 +9724,7 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 אם קורה שאני לא אוכלת בבוקר [[קרואסון|טורט]] כלשהו ושותה [[קפה|הספלים מהם אנו שותים]], אני כל היום כמו תינוק שפסח על שלב הזחילה, [[המוטוריקה|https://he.wikipedia.org/wiki/%D7%94%D7%9E%D7%A2%D7%A8%D7%9B%D7%AA_%D7%94%D7%9E%D7%95%D7%98%D7%95%D7%A8%D7%99%D7%AA]] שלי משתבשת.
 </pre>
 </div>
-<div created="20170811181124336" modified="20170815173236510" tags="[[סיפורים אמיתיים]]" title="בבית של פיני">
+<div created="20170811181124336" modified="20170821184958701" tags="[[סיפורים אמיתיים]] [[דןדן נסע]]" title="בבית של פיני">
 <pre>!!![[יויו]]:
 //''''
 לפני כמה ימים [[קיבלנו|האחיות כהן]] מכתב [[מדןדן|דןדן]], אחרי  שלא שמענו ממנו [[שנה בערך|דןדן נסע]]. אני כל כך  אוהב אותו ומתגעגע אליו. באישורו, אני מעתיק לכאן את המכתב:
@@ -10710,7 +10718,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170112183255462" modified="20170505125623715" title="דןדן נסע">
+<div created="20170112183255462" modified="20170821185110282" title="דןדן נסע">
 <pre>[img[pictures/dandan-nasa.jpg]]
 
 !!![[אירי]]:
@@ -10735,6 +10743,8 @@ Is where I want to be
 שלכם תמיד למרות מה שכתבתי,
 דןדן.
 
+
+&lt;&lt;list-links filter:&quot;[tag[דןדן נסע]]&quot;&gt;&gt;
 
 
 </pre>
@@ -10991,7 +11001,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 ובזאת תמו דברינו לערב זה.
 </pre>
 </div>
-<div created="20170325162001136" modified="20170720150145023" tags="[[סיפורים אמיתיים]]" title="הכתיבה">
+<div created="20170325162001136" modified="20170821185201089" tags="[[סיפורים אמיתיים]] [[דןדן נסע]]" title="הכתיבה">
 <pre>[img[pictures/dAslRkCtpSF1J4AA.jpg]]
 
 !!![[גורה]]:
@@ -12391,6 +12401,25 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20170820171314166" modified="20170821185037820" tags="[[המטבח על פי ז'נבייב]]" title="סולטנה">
+<pre>[img[pictures/sultana.jpg]]
+
+!!![[יויו]]:
+
+סולטנה נולדה ביוון, ובגיל שנה הגיעה עם אימה וסבתא לפריז, בעקבות גבר שהתאהב בסבתה. את אביה מעולם לא פגשה.
+
+כשסולטנה הייתה בת 12, אימה התאהבה בגבר בלגי, ונסעה לחיות איתו בבלגיה. סולטנה העדיפה להישאר עם סבתה בפריז, וביקרה את אימה מידי קיץ.
+
+היא בילתה שעות ארוכות עם סבתה במטבח, גם כאשר הכינה שיעורים או עשתה עבודות יד. 
+
+כשנישאה בגיל 25, כבר הייתה אחרי לימודים לתואר ראשון באומנות, ואחרי טיול ארוך באירופה. אחרי הלידה הראשונה התחילה ללכת לקורסים שונים של בישול ואפייה, וכשהבנים גדלו התחילה לעבוד במסעדות.
+
+היא בת 56, נשואה לז'אן פול ואם לשני בנים, סרז' (בן 30) וקמיל (בן 28)
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[סולטנה]]&quot;&gt;&gt;</pre>
+</div>
 <div created="20170331195529688" modified="20170620150556736" tags="[[אחות כהן]]" title="סוניה">
 <pre>[img[pictures/sonya.jpg]]
 
@@ -13613,6 +13642,24 @@ Fapina''
 
 </pre>
 </div>
+<div created="20170820183837636" modified="20170822182605621" tags="סולטנה" title="צזיקי">
+<pre>[img[pictures/tzaziki.jpg]]
+
+!!![[סולטנה]]:
+
+סרז' שלי תמיד היה ילד מיוחד, והוא גם לא אהב מלפפונים. סבתי ז&quot;ל הייתה עושה לו את [[הצזיקי|https://en.wikipedia.org/wiki/Tzatziki]] כמו שהוא אוהב, ועם קשוא ירוק כהה וזרעי קימל
+
+* לוקחים שני קישואים ירוק כהה, קטנים קטנים וקשים קשים, חותכים אותם לקוביות קטנות ושמים בקערת ערבוב בינונית (עדיף נירוסטה)
+* קוצצים חופן שמיר דק דק
+* קוצצים שום אחד דק
+* מוזגים מעל יוגורט סמיך לא חמוץ - 2 כוסות
+* מתבלים עם מלח גס ופלפל שחור
+* מפזרים מעל חופן שמיר קצוץ דק וכף זרעי קימל (אם אוהבים)
+* מערבבים בעזרת שתי כפות מלמטה למעלה, ומבחוץ פנימה בתנועות עדינות, זאת אומרת בתנועה מעגלית מהחוץ למרכז, כך שכלום לא ימעך
+*מקשטים בכמה טיפות שמן זית, ומגישים
+
+</pre>
+</div>
 <div created="20170412170336651" modified="20170412203254735" tags="[[מתכוני ארוחת הכריסמס]]" title="צלי בשר עם תפוחי אדמה">
 <pre>[img[pictures/zli-bakar.jpg]]
 
@@ -13713,7 +13760,7 @@ Fapina''
 
 7. מגישים: על צלחת גדולה ערימת קוסקוס ועליה המרק.</pre>
 </div>
-<div created="20170817155826253" modified="20170818045323178" tags="" title="קופים ממונעים">
+<div created="20170817155826253" modified="20170821175846917" tags="" title="קופים ממונעים">
 <pre>[img[pictures/kofim-memunaim.jpg]]
 
 !!![[יויו]]: 
@@ -13723,7 +13770,7 @@ Fapina''
 [[כאחות כהן|אחות כהן]], ה-DNA שלי נושא בתוכו, אני מניח, אי אילו עוברי אורח - אולי [[קוזאקים|https://he.wikipedia.org/wiki/%D7%A7%D7%95%D7%96%D7%90%D7%A7%D7%99%D7%9D]], אולי [[טטרים|https://he.wikipedia.org/wiki/%D7%98%D7%98%D7%A8%D7%99%D7%9D]], אולי [[ויקינגים|https://he.wikipedia.org/wiki/%D7%95%D7%99%D7%A7%D7%99%D7%A0%D7%92%D7%99%D7%9D]], [[פיניקים|https://he.wikipedia.org/wiki/%D7%A4%D7%99%D7%A0%D7%99%D7%A7%D7%99%D7%9D]], [[יבוסים|https://he.wikipedia.org/wiki/%D7%99%D7%91%D7%95%D7%A1%D7%99%D7%9D]], [[הונים|https://he.wikipedia.org/wiki/%D7%94%D7%95%D7%A0%D7%99%D7%9D]] וכל השאר
 
  
-[[כהומו ספיאנס|https://he.wikipedia.org/wiki/%D7%90%D7%93%D7%9D]] יש מצב שבמטעני הגנטי קיימת כמות לא ידועה, של שרידי גנום [[ניאנדרטלי|https://he.wikipedia.org/wiki/%D7%94%D7%90%D7%93%D7%9D_%D7%94%D7%A0%D7%99%D7%90%D7%A0%D7%93%D7%A8%D7%98%D7%9C%D7%99]] או [[אוסטרלופיתקוסי|https://he.wikipedia.org/wiki/%D7%90%D7%95%D7%A1%D7%98%D7%A8%D7%9C%D7%95%D7%A4%D7%99%D7%AA%D7%A7%D7%95%D7%A1]], שלא לומר [[אורורין טוגננסיס|https://he.wikipedia.org/wiki/%D7%90%D7%95%D7%A8%D7%95%D7%A8%D7%99%D7%9F_%D7%98%D7%95%D7%92%D7%A0%D7%A0%D7%A1%D7%99%D7%A1]]
+[[כהומו ספיאנס|https://he.wikipedia.org/wiki/%D7%90%D7%93%D7%9D]] יש מצב שבמטעני הגנטי קיימת כמות לא ידועה, של שרידי גנום [[ניאנדרטלי|https://he.wikipedia.org/wiki/%D7%94%D7%90%D7%93%D7%9D_%D7%94%D7%A0%D7%99%D7%90%D7%A0%D7%93%D7%A8%D7%98%D7%9C%D7%99]] או [[אוסטרלופיתקוסי|https://he.wikipedia.org/wiki/%D7%90%D7%95%D7%A1%D7%98%D7%A8%D7%9C%D7%95%D7%A4%D7%99%D7%AA%D7%A7%D7%95%D7%A1]], שלא לומר [[אורורין טוגננסיס|https://he.wikipedia.org/wiki/%D7%90%D7%95%D7%A8%D7%95%D7%A8%D7%99%D7%9F_%D7%98%D7%95%D7%92%D7%A0%D7%A0%D7%A1%D7%99%D7%A1]], ומי יודע?
 
 אנחנו כולנו כולנו, וכולנו זה [[אנחנו|https://i.pinimg.com/236x/c3/7a/64/c37a645d3911729deef9f23354ce32bc--northern-exposure-car-keys.jpg]]
 
@@ -14132,6 +14179,37 @@ Fapina''
 
 </pre>
 </div>
+<div created="20170821183123825" modified="20170822183521386" tags="[[דןדן נסע]]" title="שה פניס">
+<pre>!!![[יויו]]:
+
+כן - [[הוא|דןדן]] כתב לנו עוד מכתב (אוגוסט 2017), וגם אותו אני מעתיק לכאן:
+
+
+[img[pictures/chez-panisse.jpg]]
+
+אחיות שלי,
+
+נכנסנו הבייתה לפני שעה, אחרי שלושה ימים בברקלי, ואני משולהב כל כך וחייב לספר לכם:
+
+דודי מו חוגג יום הולדת 60, ולכבוד הארוע, ילדיו, בני דודי, בן (22) ונטלי (20), החליטו להוציא אותו (ואותי) מהבית.
+בן הגיע עם המכונית שלו, הם לקחו ארבעה חדרים בבית מלון מפנק. טיילנו והסתובבנו, והשיא מבחינת כולנו היה לאכול [[Chez Panisse|https://en.wikipedia.org/wiki/Chez_Panisse]].
+
+מסעדה שהקימה [[אליס ווטרס|https://en.wikipedia.org/wiki/Alice_Waters#Slow_Food]]
+
+אכלנו יום אחד [[במסעדה|http://www.chezpanisse.com/menus/restaurant-menu/]], ויום אחד [[בבית קפה|http://www.chezpanisse.com/menus/cafe-menu/]]. 
+
+חומרי הגלם שם - הדגים ופירות הים, הבשר, הירקות והפרות - פשוט טעימים. כל כך התרגשתי, הרגשתי חלק מעולם הקולינריה בזכותכם. הגישה של המקום הזה הזכירה לי את [[הקוסקוס]], ובעיקר את [[ז'נבייב המתוקה|המטבח על פי ז'נבייב]]. 
+
+לא הכרתי את המושג [[slow food|https://en.wikipedia.org/wiki/Slow_Food]], לא התעניינתי [[במטבח קליפורני|https://en.wikipedia.org/wiki/California_cuisine]], זה הכל היה הפתעה מוחלטת בשבילי, אבל פתאום שם, בעיקר כשראיתי את ההואי במטבח והאוכל הכיפי, חשבתי עליכם. על השיחות שלנו במטבח. על הדיבורים שלכם על אוכל.
+
+מתגעגע ואוהב
+
+שלכם - דןדן
+
+
+
+</pre>
+</div>
 <div created="20161219172718131" modified="20170611194427231" tags="HH" title="שואה">
 <pre>&lt;blockquote&gt;&quot;אם נהיה מספיק מרוכזים, לא תהא שואה שלישית&quot; &amp;mdash; [[הדוד|הדוד האמיתי]]&lt;/blockquote&gt;
 
@@ -14302,6 +14380,22 @@ Fapina''
 
 
 </pre>
+</div>
+<div created="20170820121344664" modified="20170821173524724" tags="[[המטבח על פי ז'נבייב]]" title="שערות לאחור">
+<pre>[img[pictures/searot-leachor.jpg]]
+
+!!![[ז'נבייב]]:
+
+בנובמבר הקרוב ימלאו לי 46, ובעידודו של [[ג'וזף|ג'וזף אברואה]], החלטתי לעשות רביזיה במטבח.
+
+ראשית - להביא מבשלת נוספת, ולעבוד פחות, ודבר שני לעשות שיפוץ קטן גם למסעדה וגם לתפריט.
+
+קיבלתי לעבודה את [[סולטנה]], אישה מקסימה בת 56.
+
+בסוף יום העבודה הראשון שלה שוחחנו, והיא אמרה:
+
+//
+ברשותך, אני מבינה שזה עוד לא הזמן שלי להעיר הערות, אבל דבר אחד, לא מפריע לי כובע או לא כובע, אבל אי אפשר שהשערות של החברה יטבלו באוכל ויתרוצצו על הפנים - במטבח משאירים את השערות מאחור, אני בעד קשתות.//</pre>
 </div>
 <div created="20161113183624587" modified="20170507221601208" title="שרלה הייתה אוהבת את זה">
 <pre>[img[pictures/bEhhnCTBucJG9v6o.JPG]]
